# roverOS

./: .gitignore  Cargo.toml  README.md
config/: mapping.toml  mobility.toml  motor_communication.toml
docs/: Hardware Layout.drawio  Logic Map.drawio
hardware/: directdrive_m1502e-111.toml  stereolabs_zed_x.toml
src/: main.rs  mapping_config.rs  mobility_config.rs
