[package]
name = "roverOS"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
    "arch-std",
    "executor-thread",
] }
embassy-time = { version = "0.4", features = ["std", "generic-queue-8"] }
embassy-futures = "0.1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
